--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <a href="https://www.facebook.com/profile.php?id=100041005143683" target="_blank">
                 <img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" alt="Facebook" />
             </a>
-            <a href="https://github.com/Epic-Apps-Hub" target="_blank">
+            <a href="https://github.com/m4hmoud-atef" target="_blank">
                 <img src="https://img.icons8.com/bubbles/50/000000/github.png" alt="GitHub" />
             </a>
             <a href="https://www.linkedin.com/in/mahmoud-atef-5753051b8" target="_blank">
